--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,7 @@ verify_ssl = true
 
 [packages]
 project-nightlight = {editable = true,path = "."}
+pillow = "*"
 
 [requires]
 python_version = "3.7"
